welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: value EstSurBiscuit
if (EstSurBiscuit()==True) {
    ^Variables:2: error: not found: value True
if (EstSurBiscuit()==True) {
                     ^Variables:5: error: not found: value True
while (estSurBiscuit()!=True) {
                        ^