welcome.lessons.welcome.variables.Variables.scala.code
var nbPas= 0
if (EstSurBiscuit()==True) {
  prendBiscuit()
}
while (estSurBiscuit()!=True) {
  avance(nbPas:Int)
  nbPas=nbPas+1
}  
var DejaFait=0
while (DejaFait!=nbPas){
  recule()
  DejaFait=DejaFait+1
}